force-app/main/default/objects/LPCR_Avoir__c/LPCR_Avoir__c.object-meta.xml
<CustomObject>
    <label>Avoir</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Nom de Avoir</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Avoirs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>