force-app/main/default/objects/LPCR_Avoir__c/fields/LPCR_AvoirCommande__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AvoirCommande__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Avoir</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Avoirs</relationshipLabel>
    <relationshipName>Avoirs</relationshipName>
    <type>Lookup</type>
</CustomField>