force-app/main/default/objects/LPCR_Avoir__c/fields/LPCR_CompteClient__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CompteClient__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Compte Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Avoirs</relationshipLabel>
    <relationshipName>Avoirs</relationshipName>
    <type>Lookup</type>
</CustomField>