force-app/main/default/objects/LPCR_Avoir__c/fields/LPCR_DateFacture__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateFacture__c</fullName>
    <label>Date de début de l&apos;avoir</label>
    <type>Date</type>
</CustomField>