force-app/main/default/objects/LPCR_Avoir__c/fields/LPCR_DateFinAvoir__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateFinAvoir__c</fullName>
    <label>Date de fin de l&apos;avoir</label>
    <type>Date</type>
</CustomField>