force-app/main/default/objects/LPCR_Avoir__c/fields/LPCR_Description__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Description__c</fullName>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>