force-app/main/default/objects/LPCR_Avoir__c/fields/LPCR_Facture__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Facture__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facture</label>
    <referenceTo>blng__Invoice__c</referenceTo>
    <relationshipLabel>Avoirs</relationshipLabel>
    <relationshipName>Avoirs</relationshipName>
    <type>Lookup</type>
</CustomField>