force-app/main/default/objects/LPCR_Avoir__c/fields/LPCR_LigneFacture__c.field-meta.xml
<CustomField>
    <fullName>LPCR_LigneFacture__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ligne de Facture</label>
    <referenceTo>blng__InvoiceLine__c</referenceTo>
    <relationshipLabel>Avoirs</relationshipLabel>
    <relationshipName>Avoirs</relationshipName>
    <type>Lookup</type>
</CustomField>