force-app/main/default/objects/LPCR_Avoir__c/fields/LPCR_Montant__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Montant__c</fullName>
    <defaultValue>-0.1</defaultValue>
    <label>Montant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>