force-app/main/default/objects/LPCR_Avoir__c/fields/LPCR_MontantAvoir__c.field-meta.xml
<CustomField>
    <fullName>LPCR_MontantAvoir__c</fullName>
    <label>Montant avoir</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>