force-app/main/default/objects/LPCR_Avoir__c/fields/LPCR_NomSociete__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NomSociete__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Nom de la société</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Avoirs</relationshipLabel>
    <relationshipName>Avoir</relationshipName>
    <type>Lookup</type>
</CustomField>