force-app/main/default/objects/LPCR_Avoir__c/fields/LPCR_Periode__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Periode__c</fullName>
    <label>Période</label>
    <type>Date</type>
</CustomField>