force-app/main/default/objects/LPCR_Avoir__c/fields/LPCR_PrixUnitaire__c.field-meta.xml
<CustomField>
    <fullName>LPCR_PrixUnitaire__c</fullName>
    <label>Prix unitaire</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>