force-app/main/default/objects/LPCR_Avoir__c/fields/LPCR_Quantite__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Quantite__c</fullName>
    <label>Quantité</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>