force-app/main/default/objects/LPCR_Avoir__c/fields/LPCR_Statut__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brouillon</fullName>
            </value>
            <value>
                <fullName>Prêt à valider</fullName>
            </value>
            <value>
                <fullName>A Envoyer</fullName>
            </value>
            <value>
                <fullName>Envoyée</fullName>
            </value>
            <value>
                <fullName>Annulée</fullName>
            </value>
            <value>
                <fullName>Terminée</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>