force-app/main/default/objects/LPCR_Avoir__c/fields/LPCR_TypeAvoir__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypeAvoir__c</fullName>
    <label>Type d&apos;avoir</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Avoir total</fullName>
            </value>
            <value>
                <fullName>Avoir partiel</fullName>
            </value>
            <value>
                <fullName>Avoir direct</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>