force-app/main/default/objects/LPCR_Avoir__c/validationRules/LPCR_VerifierMontantAvoir.validationRule-meta.xml
<ValidationRule>
    <fullName>LPCR_VerifierMontantAvoir</fullName>
    <active>true</active>
    <errorConditionFormula>LPCR_Montant__c  &gt; 0 &amp;&amp; NOT($Permission.LPCR_ByPass_VR)</errorConditionFormula>
    <errorDisplayField>LPCR_Montant__c</errorDisplayField>
    <errorMessage>Le montant avoir doit etre négatif</errorMessage>
</ValidationRule>